--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ./app:/app
+      - ./django_docker:/app
     ports:
       - 8080:8080 #80:8080 not display port
     command: python manage.py runserver 0.0.0.0:8080
@@ -26,8 +26,8 @@ services:
       - POSTGRES_DB=hospital
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-    #    volumes:
-    #      - pgdata:/var/lib/postgresql/data
+    volumes:
+      - /host_folder/postgres_data:/var/lib/postgresql/data
     ports:
       - 5432:5432
 
